# openc2e

./: .git-blame-ignore-revs  .gitignore  AUTHORS  Agent.cpp  Agent.h  AgentHelpers.cpp  AgentHelpers.h  AgentRef.cpp  AgentRef.h  AudioBackend.h  BUILDING  Backend.cpp  Backend.h  Blackboard.cpp  Blackboard.h  Bubble.cpp  Bubble.h  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  CallButton.cpp  CallButton.h  Camera.cpp  Camera.h  CameraPart.h  Catalogue.cpp  Catalogue.h  CompoundAgent.cpp  CompoundAgent.h  CompoundPart.cpp  CompoundPart.h  Creature.cpp  Creature.h  CreatureAgent.cpp  CreatureAgent.h  Engine.cpp  Engine.h  Lift.cpp  Lift.h  Makefile  (+178 more)
.github/workflows/: build.yml
.shake/Shake/: Base.pm  Check.pm  CheckOne.pm  Config.pm  Script.pm  Util.pm
English.lproj/: InfoPlist.strings
caosdata/: build.sh  caosdata_template.cpp  caosdocs.css  caosdocs.html  hash.pl  makedocs.pl
caosdata/hash/: Makefile  main.c  perfect.c  perfect.h  perfhex.c  phash.c  recycle.h
cmake/: FindALUT.cmake  FindSDL2.cmake  FindSDL2_mixer.cmake  FindSDL2_net.cmake  FindSDL_gfx.cmake  Findutf8proc.cmake  GoogleTest.cmake  GoogleTestAddTests.cmake  Openc2eBuildBeforeTests.cmake  Openc2eBundle.cmake  Openc2eDetectTargetArchitecture.cmake  Openc2eOutputOnTestFailure.cmake  Openc2eReadGitRev.cmake
cmake/emscripten/: EMSCRIPTEN-SUPPORT.md  FindPNG.cmake  FindZLIB.cmake
debian/: README  README.Debian  changelog  conffiles.ex  control  copyright  cron.d.ex  docs  dput.cf  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  openc2e-default.ex  openc2e-tools.install  openc2e.doc-base  openc2e.doc-base.EX  openc2e.docs  openc2e.install  postinst.ex  postrm.ex  ppabuild  ppabuild.sh  preinst.ex  prerm.ex  rules  watch.ex
docs/: Makefile  Makefile.in  openc2e.6  openc2e.pod  writehtml.py
docs/en/: Makefile  Makefile.in
openc2e.xcode/: bbz.pbxuser  fuzzie.mode1  fuzzie.pbxuser  project.pbxproj
qtgui/: AgentInjector.cpp  AgentInjector.h  BrainViewer.cpp  BrainViewer.h  Hatchery.cpp  Hatchery.h  QtBackend.cpp  QtBackend.h  agents.ui  c1cobfile.cpp  c1cobfile.h  imagepreview.cpp  imagepreview.h  main.cpp  openc2eview.cpp  openc2eview.h  qtgui.pro  qtopenc2e.cpp  qtopenc2e.h
scripts/: add_includes_if_matches.py  docs.css  lint.py  lint.sh  move_caos_functions_out_of_caosvm.py  parsedocs.py  replace_boost_format.py  writecmds.py  writehtml.py
ser/: Agent.h  AgentRef.h  Scriptorium.h  bytecode.h  caosScript.h  caosVM.h  caosVar.h  s_Agent.h  s_AgentRef.h  s_Scriptorium.h  s_bytecode.h  s_caosScript.h  s_caosVM.h  s_caosVar.h  s_creaturesImage.h  s_genome.h  s_map.h  s_metaroom.h  s_physics.h  s_room.h
src/: .clang-format  Agent.cpp  Agent.h  AgentHelpers.cpp  AgentHelpers.h  AgentRef.cpp  AgentRef.h  AnimatablePart.cpp  AnimatablePart.h  AudioBackend.h  Backend.cpp  Backend.h  BackendEvent.h  Blackboard.cpp  Blackboard.h  Bubble.cpp  Bubble.h  ButtonPart.cpp  ButtonPart.h  CallButton.cpp  CallButton.h  Camera.cpp  Camera.h  CameraPart.cpp  CameraPart.h  Catalogue.cpp  Catalogue.h  ChemicalNamesManager.cpp  ChemicalNamesManager.h  CobManager.cpp  CobManager.h  CompoundAgent.cpp  CompoundAgent.h  CompoundCreature.cpp  CompoundPart.cpp  CompoundPart.h  Creature.cpp  Creature.h  CreatureAgent.cpp  CreatureAgent.h  (+168 more)
src/audiobackend/: AudioBackend.h  AudioChannel.h  AudioState.h  NullAudioBackend.h  SDLMixerBackend.cpp  SDLMixerBackend.h  SkeletonAudioBackend.h
src/backends/: NullAudioBackend.h  NullBackend.h  OpenALBackend.cpp  OpenALBackend.h  SDLBackend.cpp  SDLBackend.h  SDLMixerBackend.cpp  SDLMixerBackend.h  SkeletonAudioBackend.h
src/caos/: caosVM_agent.cpp  caosVM_camera.cpp  caosVM_cdplayer.cpp  caosVM_compound.cpp  caosVM_core.cpp  caosVM_creatures.cpp  caosVM_debug.cpp  caosVM_files.cpp  caosVM_flow.cpp  caosVM_genetics.cpp  caosVM_history.cpp  caosVM_input.cpp  caosVM_map.cpp  caosVM_motion.cpp  caosVM_net.cpp  caosVM_ports.cpp  caosVM_resources.cpp  caosVM_scripts.cpp  caosVM_ser_real.cpp  caosVM_ser_stub.cpp  caosVM_sounds.cpp  caosVM_time.cpp  caosVM_variables.cpp  caosVM_vectors.cpp  caosVM_vehicles.cpp  caosVM_world.cpp
src/cobfile/: c1cobfile.cpp  c1cobfile.h  c2cobfile.cpp  cobFile.cpp  cobFile.h
src/common/: Ascii.h  Color.h  ComPtr.h  ConstructAt.h  EncodingTest.cpp  EntityPool.h  Exception.h  Expected.h  FixedPoint.h  HeapValue.h  Image.h  IotaView.h  Monostate.h  NumericCast.cpp  NumericCast.h  NumericCastTest.cpp  OptionsParser.h  OutPtr.h  PointerView.h  Random.cpp  Random.h  Ranges.h  Repr.cpp  Repr.h  ResizableContainerView.h  SafeCompare.h  SimpleLexer.cpp  SimpleLexer.h  SimpleVariant.h  SlotMap.h  SparseSet.h  StaticSet.h  StaticVector.h  StringView.h  WildcardMatchTest.cpp  WindowsRegistry.cpp  WindowsRegistry.h  ascii_tolower.h  backtrace.h  case_insensitive_filesystem.cpp  (+35 more)
src/creatures/: Biochemistry.cpp  CompoundCreature.cpp  CompoundCreature.h  Creature.cpp  Creature.h  CreatureAI.cpp  CreatureAgent.cpp  CreatureAgent.h  SkeletalCreature.cpp  SkeletalCreature.h  attFile.cpp  c2eBrain.cpp  c2eBrain.h  c2eCreature.h  genome.h  genomeFile.cpp  lifestage.h  oldBrain.cpp  oldBrain.h  oldCreature.h
src/fileformats/: Caos2PrayParser.h  Caos2PrayParser.re2c  Caos2PrayParser.re2c.cpp  ImageUtils.cpp  ImageUtils.h  MFCObject.h  MFCReader.cpp  MFCReader.h  MFCWriter.cpp  MFCWriter.h  MfcReader.cpp  MfcReader.h  (+67 more)
tests/: file.cos  flow.cos  ifblocks.cos  parse-comment-end.cos  parsing.cos  simpleagent.cos  special-lexing.c1,c2.cos  strings.cos  test_caos.cpp  test_demangle.cpp  test_encoding.cpp  test_pray.cpp  test_utils.cpp  timeslice.c1,c2.cos  variables.cos  vector.cos
tools/: CMakeLists.txt  depgraph.sh  filetests.cpp  gctest.cpp  memstats.cpp  mngtest.cpp  newcopyright.pl  pathtest.cpp  praydumper.cpp  serialtest.cpp  sfcdumper.py
unittests/: file.t  flow.cos  flow.t  ifblocks.cos  ifblocks.t  simpleagent.cos  simpleagent.t  special-lexing.c1,c2.cos  timeslice.c1,c2.cos  variables.cos  variables.t  vector.cos  vector.t
windows/: gamefinder.nsi  openc2e.nsi  windows-license.txt
(+1160 files in other folders)
